Add hit sound volume and rotation speed multiplier settings
- Introduced new properties for hit sound volume and rotation speed multiplier in config.py and config/settings.json to enhance audio feedback and gameplay dynamics.
- Updated RotatingThrusterShip and Ship classes to utilize the new rotation speed multiplier for improved ship control.
- Implemented a bad hit sound effect in SoundManager, enhancing player feedback during collisions.
- Adjusted collision handling to play the bad hit sound when the player is struck, improving overall game experience.

--- a/config/settings.json
+++ b/config/settings.json
@@ -207,6 +207,7 @@
     "enemyDestroyVolume": 0.6,
     "exitWarbleVolume": 0.65,
     "powerupActivationVolume": 0.6,
+    "hitSoundVolume": 0.35,
     "thrusterNoiseDuration": 0.1,
     "shootBlipFrequency": 800,
     "shootBlipDuration": 0.05
@@ -244,7 +245,8 @@
       "speedIncrement": 0.05,
       "glowIntensityIncrement": 0.1,
       "hueRotation": 30
-    }
+    },
+    "rotationSpeedMultiplier": 1.2
   },
   "starAnimation": {
     "appearDuration": 0.4,
