Enhance game configuration and resource loading
- Added fullscreen option to ScreenSettings in config.py and updated settings.json to reflect new screen dimensions and fullscreen preference.
- Refactored file path handling in level_config.py and various rendering modules to utilize resource_path for consistent asset loading across development and PyInstaller environments.
- Improved README with instructions for building distributables using PyInstaller, ensuring clarity on prerequisites and build processes.
- Updated requirements.txt to include PyInstaller as a dependency for packaging the game.

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,9 @@
 {
   "screen": {
-    "width": 1480,
-    "height": 900,
-    "fps": 60
+    "width": 3840,
+    "height": 2160,
+    "fps": 60,
+    "fullscreen": true
   },
   "ship": {
     "size": 8,
@@ -178,7 +179,7 @@
     "thrustPlumeParticles": 5
   },
   "colors": {
-    "background": [10, 10, 20],
+    "background": [9,1,19],
     "ship": [100, 200, 255],
     "walls": [150, 150, 150],
     "enemyStatic": [255, 100, 100],
