--- a/config/settings.json
+++ b/config/settings.json
@@ -116,6 +116,20 @@
     "baseCount": 1,
     "scaleFactor": 0.5
   },
+  "flockerEnemy": {
+    "size": 12,
+    "color": [80, 150, 200],
+    "speedMultiplier": 0.4,
+    "separationRadius": 50,
+    "alignmentRadius": 80,
+    "cohesionRadius": 100,
+    "separationWeight": 1.5,
+    "alignmentWeight": 1.0,
+    "cohesionWeight": 1.0,
+    "seekWeight": 0.8,
+    "baseCount": 2,
+    "scaleFactor": 0.3
+  },
   "baby": {
     "size": 10,
     "speedMultiplier": 0.1
