--- a/config/settings.json
+++ b/config/settings.json
@@ -118,7 +118,7 @@
   },
   "flockerEnemy": {
     "size": 12,
-    "color": [80, 150, 200],
+    "color": [255, 180, 50],
     "speedMultiplier": 0.4,
     "separationRadius": 50,
     "alignmentRadius": 80,
@@ -128,7 +128,10 @@
     "cohesionWeight": 1.0,
     "seekWeight": 0.8,
     "baseCount": 2,
-    "scaleFactor": 0.3
+    "scaleFactor": 0.3,
+    "closeRangeFireDistance": 150,
+    "closeRangeFireAngleTolerance": 30.0,
+    "clusterRadius": 300
   },
   "baby": {
     "size": 10,
@@ -193,7 +196,7 @@
     "thrustPlumeParticles": 5
   },
   "colors": {
-    "background": [9,1,19],
+    "background": [9, 1, 19],
     "ship": [100, 200, 255],
     "walls": [150, 150, 150],
     "enemyStatic": [255, 100, 100],
