Update flocker enemy settings to include fire cooldown
- Added fireCooldownSeconds property to FlockerEnemySettings and updated settings.json to define its value.
- Modified load_settings function to load the new fire cooldown setting.
- Adjusted FlockerEnemyShip to utilize the configured fire cooldown for firing logic, enhancing gameplay consistency.

--- a/config/settings.json
+++ b/config/settings.json
@@ -131,7 +131,8 @@
     "scaleFactor": 0.3,
     "closeRangeFireDistance": 150,
     "closeRangeFireAngleTolerance": 30.0,
-    "clusterRadius": 300
+    "clusterRadius": 300,
+    "fireCooldownSeconds": 5.0
   },
   "baby": {
     "size": 10,
