Enhance scoring and game mechanics
- Added enemyDestructionBonus to scoring settings for improved scoring dynamics.
- Updated Game class to manage game over sequence, including freezing action and displaying "GAME OVER" text.
- Refactored fuel management in Ship class to track energy used instead of fuel consumed.
- Adjusted scoring calculations to reflect energy usage and updated tests accordingly.
- Introduced new levels and refined sound management for game over and power down sequences.

--- a/config/settings.json
+++ b/config/settings.json
@@ -29,7 +29,8 @@
     "ammoPenaltyRate": 0.1,
     "fuelPenaltyRate": 0.01,
     "wallCollisionPenalty": 1,
-    "powerupCrystalBonus": 5
+    "powerupCrystalBonus": 20,
+    "enemyDestructionBonus": 20
   },
   "difficulty": {
     "baseMazeSize": 10,
@@ -320,6 +321,6 @@
     }
   },
   "game": {
-    "criticalWarningThreshold": 7
+    "criticalWarningThreshold": 20
   }
 }
