Add splash video settings and update splash screen behavior
- Introduced splashVideoEnabled setting in config to control video playback during the splash screen.
- Updated SplashScreenState to handle video playback based on the new setting, allowing for a fade-out transition if video is disabled.
- Adjusted input handling to skip to fade-out directly if video is not enabled, enhancing user experience during the splash screen.

--- a/config/settings.json
+++ b/config/settings.json
@@ -295,6 +295,7 @@
     "splashFadeInDuration": 1.0,
     "splashFadeOutDuration": 0.8,
     "splashVideoSpeedMultiplier": 1,
+    "splashVideoEnabled": false,
     "neonAsterStart": [255, 215, 0],
     "neonAsterEnd": [255, 140, 0],
     "neonVoidStart": [100, 200, 255],
